--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,22 @@
 
 
 {block name="main_content"}
-	{_('hello')}
+	<table>
+		<thead>
+			<tr>
+				<td>Book Name</td>
+				<td>Desc</td>
+				<td>Short Desc</td>
+			</tr>
+		</thead>
+		<tbody>
+			{foreach from=$result item=b}
+				<tr>
+					<td>{$b->name}</td>
+					<td>{$b->desc}</td>
+					<td>{$b->short_desc}</td>
+				</tr>
+			{/foreach}
+		</tbody>
+	</table>
 {/block}
