add the upload/download function

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,16 @@
 	{block name="extCSS"}{/block}
 
 	<script type="text/javascript" src="../public/js/jquery-1.6.4.min.js"></script>
+	
+	
+
+	
+	
 	<script language="JavaScript" type="text/javascript">
     //<![CDATA[
-          
+          $(document).ready(function(){
+        	  {insert name='fire_message'}
+          });
     //]]>
    </script>
 
