--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,12 +2,12 @@
 
 
 {block name="main_content"}
-	<form action="save_upload.php" method="post" enctype="application/x-www-form-urlencoded">
+	<form action="save_upload.php" method="post" enctype="multipart/form-data">
 		<div>
 			<p><label>Book Name</label><input type="text" name="name"/></p>
-			<p><label>Description</label><textarea name="desc"></textarea></p>
-			<p><label>Short Description</label><textarea name="short_desc"></textarea></p>
-			<p><input type="file" name=""/></p>
+			<p><label>Description</label><textarea name="description"></textarea></p>
+			<p><label>Short Description</label><textarea name="short_description"></textarea></p>
+			<p><label>Files</label><input type="file" name="file_01"/></p>
 		</div>
 		<div>
 			<button type="submit">Upload</button>
