--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -40,6 +40,11 @@
 			{block name="header_menu"}
 				<ul>
 					<li><a href="/index.php">Home</a></li>
+					<li><a href="users.php">User Management</a></li>
+					<li><a href="groups.php">Group Management</a></li>
+					<li><a href="books.php">Books Management</a></li>
+					<li><a href="category.php">Category Management</a></li>
+					<li><a href="system.php">System Management</a></li>
 				</ul>
 			{/block}
 		</div>
