--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -2,22 +2,8 @@
 
 
 {block name="main_content"}
-	<table>
-		<thead>
-			<tr>
-				<td>Book Name</td>
-				<td>Desc</td>
-				<td>Short Desc</td>
-			</tr>
-		</thead>
-		<tbody>
-			{foreach from=$result item=b}
-				<tr>
-					<td>{$b->name}</td>
-					<td>{$b->desc}</td>
-					<td>{$b->short_desc}</td>
-				</tr>
-			{/foreach}
-		</tbody>
-	</table>
+	<div class="success">
+   <p>Your content goes here</p> 
+   <div></div>
+</div>
 {/block}
