--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,10 @@
     {/block}
     
     {block name="footer"}
-		<div class="full" id="footer"><p class="obj_right">Powered By <a href="http://www.sys2do.com">www.sys2do.com</a></p></div>
+		<div class="full" id="footer">
+			<hr />
+			<p class="text_center">Powered By <a href="http://www.sys2do.com">www.sys2do.com</a></p>
+		</div>
 	{/block}
 </div>  
  
