--- a/templates/mybooks.html
+++ b/templates/mybooks.html
@@ -2,8 +2,8 @@
 
 
 {block name="main_content"}
-
-	<table cellpadding="0" cellspacing="0" border="1">
+	<div class="bottom_margin_20">
+	<table class="plain" width="100%">
 		<caption>My Upload Books</caption>
 		<thead>
 			<tr>
@@ -20,9 +20,10 @@
 			</tr>
 		{/foreach}
 	</table>
+	</div>
 	
-
-	<table cellpadding="0" cellspacing="0" border="1">
+	<div class="bottom_margin_20">
+	<table class="plain" width="100%">
 		<caption>My Downoad Book</caption>
 		<thead>
 			<tr>
@@ -39,4 +40,5 @@
 			</tr>
 		{/foreach}
 	</table>
+	</div>
 {/block}
