--- a/public/css/menu_style.css
+++ b/public/css/menu_style.css
@@ -1,7 +1,7 @@
 ul#menu{ 
 	width: 100%;
 	height: 43px;
-	background: #FFF url("../images/menu-bg.gif") top left repeat-x; 
+	background: #FFF url("../images/menu-bg-green.gif") top left repeat-x; 
 	font-size: 0.8em; 
 	font-family: "Lucida Grande", Verdana, sans-serif; 
 	font-weight: bold; 
@@ -28,6 +28,43 @@ ul#menu li a:hover {
 	}
 ul#menu li a.current{ 
 	color: #FFF; 
-	background: #FFF url("../images/current-bg.gif") top left repeat-x; 
+	background: #FFF url("../images/current-bg-green.gif") top left repeat-x; 
 	padding: 5px 15px 0; 
 	}
+
+	
+	
+ul#admin_menu {
+	width: 100%;
+	height: 43px;
+	background: #FFF url("../images/menu-bg-red.gif") top left repeat-x;
+	font-size: 0.8em;
+	font-family: "Lucida Grande", Verdana, sans-serif;
+	font-weight: bold;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+ul#admin_menu li {
+	display: block;
+	float: left;
+	margin: 0 0 0 5px;
+}
+ul#admin_menu li a {
+	height: 43px;
+	color: #777;
+	text-decoration: none;
+	display: block;
+	float: left;
+	line-height: 200%;
+	padding: 8px 15px 0;
+}
+ul#admin_menu li a:hover {
+	color: #333;
+}
+ul#admin_menu li a.current {
+	color: #FFF;
+	background: #FFF url("../images/current-bg-red.gif") top left repeat-x;
+	padding: 5px 15px 0;
+}
+	
