--- a/templates/admin/category.html
+++ b/templates/admin/category.html
@@ -1,8 +1,29 @@
 {extends file='admin/base.html'}
 
+{block name="extJavaScript"}
+<script language="JavaScript" type="text/javascript">
+//<![CDATA[
+      function delete_record(id){
+    	  if(confirm('Are you sure to delete the record ?')){
+    		  $.getJSON('category.php',
+    				  { 'q' : 'DELETE', 'id' : id, 'd' : Date.parse(new Date()) },
+    				  function(r){
+    					  if(r.flag==1){
+    						  alert('Error !');
+    					  }else{
+    						  alert('Delete the record successfully!');
+    						  window.location.reload(true);
+    					  }
+    				  });
+    	  }
+      }
+//]]>
+</script>
+{/block}
 
 {block name="main_content"}
-	<table>
+	<a href="category.php?q=EDIT">Add New Category</a>
+	<table class="plain" width="100%">
 		<thead>
 			<tr>
 				<td>Category Name</td>
@@ -13,7 +34,7 @@
 		<tbody>
 			{foreach from=$categories item=b}
 				<tr>
-					<td>{$b->name}</td>
+					<td>{$b->name} (<a href="category.php?q=EDIT&id={$b->id}">Edit</a>,<a href="#" onclick="delete_record({$b->id})">Delete</a>)</td>
 					<td>{$b->create_time}</td>
 					<td>{$b->create_by}</td>
 				</tr>
