--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,25 @@
 {extends file='base.html'}
 
 
+{block name="extCSS"}
+<link rel="stylesheet" href="../public/css/jquery/jquery-ui.css" type="text/css" />
+<link rel="stylesheet" href="../public/css/jquery/jquery.fileupload-ui.css" type="text/css" />
+{/block}
+
+{block name="extJavaScript"}
+<script type="text/javascript" src="../public/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="../public/js/jquery.iframe-transport.js"></script>
+<script type="text/javascript" src="../public/js/jquery.fileupload.js"></script>
+<script type="text/javascript" src="../public/js/jquery.fileupload-ui.js"></script>
+<script language="JavaScript" type="text/javascript">
+ //<![CDATA[
+       $(document).ready(function(){
+     	  
+       });
+ //]]>
+</script>
+{/block}
+
 {block name="main_content"}
 	<form action="save_upload.php" method="post" enctype="multipart/form-data">
 		<div>
