rejust the upload funciton

--- a/templates/book.html
+++ b/templates/book.html
@@ -9,4 +9,5 @@
 	<p>Short Description : {$book->short_description}</p>
 	
 	<p><a href="download.php?id={$book->id}">Download</a>
+	<p><a href="download_xml.php?id={$book->id}">XML</a>
 {/block}
