--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,34 +2,55 @@
 
 
 {block name="extCSS"}
-<link rel="stylesheet" href="../public/css/jquery/jquery-ui.css" type="text/css" />
-<link rel="stylesheet" href="../public/css/jquery/jquery.fileupload-ui.css" type="text/css" />
+
 {/block}
 
 {block name="extJavaScript"}
 <script type="text/javascript" src="../public/js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="../public/js/jquery.iframe-transport.js"></script>
 <script type="text/javascript" src="../public/js/jquery.fileupload.js"></script>
-<script type="text/javascript" src="../public/js/jquery.fileupload-ui.js"></script>
+
 <script language="JavaScript" type="text/javascript">
  //<![CDATA[
        $(document).ready(function(){
-     	  
+    	   $('#fileupload').fileupload({
+		        dataType: 'json',
+		        url: 'ajax_upload.php',
+		        done: function (e, data) {
+		            $.each(data.result, function (index, file) {               
+		                var html = '<tr><td>'+file.file_name+'</td><td>'+file.file_size+'</td><td>Delete</td></tr>' ;
+		                $(html).appendTo('#files_list');
+		                var ids = $("#file_ids").val();
+		                ids = ids ? ids + '|' + file.id : file.id;
+		                $("#file_ids").val(ids);
+		            });
+		        }
+		    });
        });
  //]]>
 </script>
 {/block}
+		                
 
 {block name="main_content"}
 	<form action="save_upload.php" method="post" enctype="multipart/form-data">
+		<input type="hidden" name="file_ids" id="file_ids" value=""/>
 		<div>
 			<p><label>Book Name</label><input type="text" name="name"/></p>
 			<p><label>Description</label><textarea name="description"></textarea></p>
 			<p><label>Short Description</label><textarea name="short_description"></textarea></p>
-			<p><label>Files</label><input type="file" name="file_01"/></p>
+			<p><label>Files</label><input id="fileupload" type="file" name="files[]" multiple></p>
 		</div>
 		<div>
-			<button type="submit">Upload</button>
+			<button type="submit">Submit</button>
 		</div>
+		
+		<table id="files_list">
+			<tr>
+				<td width="200">File Name</td><td width="200">File Size</td><td width="100">Delete</td>
+			</tr>
+		</table>
 	</form>
+	
+		
 {/block}
