--- a/templates/book.html
+++ b/templates/book.html
@@ -2,12 +2,19 @@
 
 
 {block name="main_content"}
-	<p>Name : {$book->name}</p>
+	<p>{t}Book Name{/t} : {$book->name}</p>
 	
-	<p>Description : {$book->description}</p>
+	<p>{t}Category{/t} : 
+		{foreach from=$categories item=c}
+			{$c->name} 
+		{/foreach}
+	</p>
 	
-	<p>Short Description : {$book->short_description}</p>
+	<p>{t}Description{/t} : {$book->description}</p>
 	
-	<p><a href="download.php?id={$book->id}">Download</a>
+	<p>{t}Short Description{/t} : {$book->short_description}</p>
+	
+	<p><a href="download.php?id={$book->id}">{t}Download{/t}</a>
 	<p><a href="download_xml.php?id={$book->id}">XML</a>
+	<p><a href="book.php?id={$book->id}&action=EDIT">{t}EDIT{/t}</a>
 {/block}
