--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,11 @@
 {block name="main_content"}
 	<form action="login_handler.php" method="post">
 		<div>
-			<p><label>E-mail</label><input name="email" type="text"/></p>
-			<p><label>Password</label><input type="password" name="password"/></p>
+			<p><label>{t}E-mail{/t}</label><input name="email" type="text"/></p>
+			<p><label>{t}Password{/t}</label><input type="password" name="password"/></p>
 		</div>
 		<div>
-			<button type="submit">Loggin</button>
+			<button type="submit">{t}Submit{/t}</button>
 		</div>
 	</form>
 {/block}
