--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 
 {block name="main_content"}
 	<div>
-		<p><label>E-mail</label>{$info->email}</p>
-		<p><label>Point</label>{$info->points}</p>
+		<p><label>{_('E-mail')}</label>{$info->email}</p>
+		<p><label>{_('Point')}</label>{$info->points}</p>
 	</div>
 {/block}
